# comsocwebapp

./: .gitignore  README.md  database.md  design-1-erel.md  design.md  prompt.md  pyproject.toml
comsocwebapp/: __init__.py  adapters.py  admin.py  auth.py  db.py  dummy.py  oauth.py  participant.py  rules.py  schema.sql  security.py  setting.py
comsocwebapp/adapters/: README.md  __init__.py  abcvoting.py  fairpyx.py  generic.py  pabutools.py
comsocwebapp/static/: style.css
comsocwebapp/templates/: base.html
comsocwebapp/templates/admin/: dashboard.html  dummies.html  dummy_form.html  not_found.html  option_form.html  setting_detail.html  setting_form.html
comsocwebapp/templates/auth/: login.html  providers.html  register.html
comsocwebapp/templates/participant/: ballot.html  index.html  receipt.html  results.html
examples/: committee_voting.py  fair_allocation.py  participatory_budgeting.py
examples/standalone_faculty_hiring/: README.md  app.py
examples/standalone_faculty_hiring/static/: style.css
examples/standalone_faculty_hiring/templates/participant/: index.html
examples/templates-fa/participant/: index.html
stress/: README.md  locustfile.py  seed_stress.py  serve_stress.py
tests/: conftest.py  test_adapters.py  test_admin_v2.py  test_auth.py  test_ballot_and_rules.py  test_db.py  test_db_v2.py  test_dummy.py  test_oauth.py  test_pages.py  test_setting.py  test_v3.py  test_v4.py
